--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,7 @@
+<div>
+  <%= flash[:notice3] %>
+</div>
+
 <h2>Books</h2>
 
 <table class="table">
@@ -9,12 +13,16 @@
 <tr>
   <td><%= book.title %></td>
   <td><%= book.body %></td>
+  <td><%= link_to "Show",book_path(book.id) %></td>
+  <td><%= link_to "Edit",edit_book_path(book.id) %></td>
+  <td><%= link_to "Destroy",book_path(book.id),method: :delete,"data-confirm"=>"Are you sure?" %></td>
 </tr>
 <% end %>
 </table>
 
 
 <h2>New book</h2>
+
 
 <%= form_with model:@book,url:'/books',method: :post do |f| %>
   <h4>Title</h4>
