--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,23 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<div>
+    <%= flash[:notice] %>
+</div>
+
+<div>
+    <%= flash[:notice2] %>
+</div>
+
+<p>
+  <strong>Title:</strong>
+  <%= @book.title %>
+</p>
+
+<p>
+  <strong>Body:</strong>
+  <%= @book.body %>
+</p>
+
+<p>
+  <%= link_to "Edit",edit_book_path(@book.id) %>
+  |
+  <%= link_to "Back","/books" %>
+</p>
