--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,16 @@
 <h1>Editing Book</h1>
 
+<% if @book.errors.any? %>
+<div class="box">
+  <h5><%= @book.errors.count %> errors prohibited this book from being saved:</h5>
+  <ul class="inner">
+      <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+      <% end %>
+  </ul>
+</div>
+<% end %>
+
 <%= form_with model: @book do |f| %>
 
   <h4>Title</h4>
@@ -10,7 +21,7 @@
 
 <div class="action">
   <%= f.submit'Update Book' %>
-</div>  
+</div>
 
 
 <% end %>
