--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,6 +34,25 @@ p{
   margin:30px;
 }
 
+.box{
+  border: 2px solid #e60000;
+  width:400px;
+  margin:20px 0;
+}
+
+.box h5{
+  color: #ffffff;
+  border-bottom: 2px solid #e60000;
+  background: #e60000;
+  margin:0;
+  padding: 5px;
+}
+
+.box .inner{
+  background: #e6e6e6;
+  padding: 30px;
+}
+
 .table{
   width:300px;
   margin:20px 0;
