--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,6 +23,17 @@
 
 <h2>New book</h2>
 
+<% if @book.errors.any? %>
+<div class="box">
+  <h5><%= @book.errors.count %> errors prohibited this book from being saved:</h5>
+  <ul class="inner">
+      <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+      <% end %>
+  </ul>
+</div>
+<% end %>
+
 
 <%= form_with model:@book,url:'/books',method: :post do |f| %>
   <h4>Title</h4>
