--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -42,5 +42,5 @@
   <h4>Body</h4>
   <%= f.text_area :body %>
 
-  <%= f.submit 'Create Book' %>
+  <div><%= f.submit 'Create Book' %></div>
 <% end %>
